welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet()
{
	var cp1:Int=0;
	var cp:Int=0;
	for (i<- 0 to 5);
	{
	if (!surBiscuit)
	{
	avance();
	cp1=cp1+1;
	}
	if (surBiscuit)
	{
	prendBiscuit();
	}
	}
	for (cp2 <- 1 to cp1)
	{
	if (porteBiscuit)
	recule();
	}
}
